# juce_meets_DaisySP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Examples/DrumKit/: DrumKit.cmake
Examples/DrumKit/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveShapeVisualizer.h
Examples/HelloDaisySP/: HelloDaisySP.cmake
Examples/HelloDaisySP/Source/: PluginProcessor.cpp
Scripts/: build_xcode.command
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
